--- a/sprint1/fil-rouge-ArtShop/public/admin/datatables.html
+++ b/sprint1/fil-rouge-ArtShop/public/admin/datatables.html
@@ -1360,8 +1360,8 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="js/ruang-admin.min.js"></script>
   <!-- Page level plugins -->
-  <script src="vendor/datatables/jquery.dataTables.min.js"></script>
-  <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+  <script src="{{asset('admin/vendor/datatables/jquery.dataTables.min.js')}}"></script>
+  <script src="{{asset('admin/vendor/datatables/dataTables.bootstrap4.min.js')}}"></script>
 
   <!-- Page level custom scripts -->
   <script>
